Update Employee and Department class fields to final
Changes made in the code include updating several fields in the Employee and Department classes to be "final". Also, various test methods were refactored to streamline their implementations such as changing retrieval of list elements to use getFirst() and getLast() methods and removed unnecessary print statements. Some instances were also refactored to process information more optimally, resulting in cleaner, more efficient code.